--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -15,7 +15,7 @@ evaluation_script: evaluation_script.zip
 remote_evaluation: True
 is_docker_based: True
 start_date: 2023-03-14 00:00:00
-end_date: 2023-03-15 23:59:58
+end_date: 2023-03-15 23:59:59
 published: True
 
 leaderboard:
@@ -30,7 +30,7 @@ challenge_phases:
   - id: 1
     name: Day one
     description: templates/challenge_day_1_description.html
-    leaderboard_public: False
+    leaderboard_public: True
     is_public: True
     is_submission_public: True
     start_date: 2023-03-14 00:00:00
@@ -40,6 +40,15 @@ challenge_phases:
     max_submissions_per_day: 1
     max_submissions_per_month: 1
     max_submissions: 1
+    default_submission_meta_attributes:
+      - name: method_name
+        is_visible: True
+      - name: method_description
+        is_visible: True
+      - name: project_url
+        is_visible: True
+      - name: publication_url
+        is_visible: True
     is_restricted_to_select_one_submission: False
     is_partial_submission_evaluation_enabled: False
     allowed_submission_file_types: ".json, .zip, .txt, .tsv, .gz, .csv, .h5, .npy, .npz"
@@ -50,11 +59,45 @@ challenge_phases:
     is_public: True
     is_submission_public: True
     start_date: 2023-03-15 00:00:00
-    end_date: 2023-03-15 23:59:58
+    end_date: 2023-03-15 23:59:59
     test_annotation_file: annotations/test_annotations_testsplit.json
     codename: day_two
     max_submissions_per_day: 1
     max_submissions_per_month: 1
     max_submissions: 1
+    default_submission_meta_attributes:
+      - name: method_name
+        is_visible: True
+      - name: method_description
+        is_visible: True
+      - name: project_url
+        is_visible: True
+      - name: publication_url
+        is_visible: True
     is_restricted_to_select_one_submission: False
     is_partial_submission_evaluation_enabled: False
+    allowed_submission_file_types: ".json, .zip, .txt, .tsv, .gz, .csv, .h5, .npy, .npz"
+    
+    dataset_splits:
+  - id: 1
+    name: All_data_splot
+    codename: all_data_split
+    
+  challenge_phase_splits:
+  - challenge_phase_id: 1
+    leaderboard_id: 1
+    dataset_split_id: 1
+    visibility: 3
+    leaderboard_decimal_precision: 3
+    is_leaderboard_order_descending: True
+  - challenge_phase_id: 2
+    leaderboard_id: 2
+    dataset_split_id: 1
+    visibility: 3
+    leaderboard_decimal_precision: 3
+    is_leaderboard_order_descending: True
+    
+    
+    
+    
+    
