--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -1,45 +1,52 @@
 # If you are not sure what all these fields mean, please refer our documentation here:
 # https://evalai.readthedocs.io/en/latest/configuration.html
-title: 2023 IPC Stochastic Planning and Reinforcement Learning Track Dry-run
-short_description: The International Probabilistic Planning Competition is organized in the context of the International Conference on 
-Planning and Scheduling (ICAPS). It empirically evaluates state-of-the-art planning systems on a number of benchmark problems. 
-The goals of the IPC are to promote planning research, highlight challenges in the planning community and provide new and interesting problems as 
-benchmarks for future research.
+title: Random Number Generator Challenge
+short_description: Random number generation challenge for each submission
 description: templates/description.html
 evaluation_details: templates/evaluation_details.html
 terms_and_conditions: templates/terms_and_conditions.html
-image: IPC_2023_blue.jpg
+image: logo.jpg
 submission_guidelines: templates/submission_guidelines.html
-leaderboard_description: Leaderboard
+leaderboard_description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras egestas a libero nec sagittis.
 evaluation_script: evaluation_script.zip
-remote_evaluation: True
-is_docker_based: True
-start_date: 2023-03-14 00:00:00
-end_date: 2023-03-15 23:59:59
-published: True
+remote_evaluation: False
+is_docker_based: False
+start_date: 2023-03-12 00:00:00
+end_date: 2099-05-31 23:59:59
+published: False
 
 leaderboard:
   - id: 1
     schema:
       {
-        "labels": ["Race Car", "Reservoir Control", "Recommender Systems", "HVAC", "UAV", "Power Generation", "Mountain Car", "Mars Rover", "Total"],
+        "labels": ["Metric1", "Metric2", "Metric3", "Total"],
         "default_order_by": "Total",
+        "metadata": {
+          "Metric1": {
+            "sort_ascending": True,
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
+          },
+          "Metric2": {
+            "sort_ascending": True,
+            "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
+          }
+        }
       }
 
 challenge_phases:
   - id: 1
-    name: Day one
-    description: templates/challenge_day_1_description.html
-    leaderboard_public: True
+    name: Dev Phase
+    description: templates/challenge_phase_1_description.html
+    leaderboard_public: False
     is_public: True
     is_submission_public: True
-    start_date: 2023-03-14 00:00:00
-    end_date: 2023-03-14 23:59:59
+    start_date: 2023-03-12 00:00:00
+    end_date: 2099-04-25 23:59:59
     test_annotation_file: annotations/test_annotations_devsplit.json
-    codename: day_one
-    max_submissions_per_day: 1
-    max_submissions_per_month: 1
-    max_submissions: 1
+    codename: dev
+    max_submissions_per_day: 5
+    max_submissions_per_month: 50
+    max_submissions: 50
     default_submission_meta_attributes:
       - name: method_name
         is_visible: True
@@ -49,22 +56,39 @@ challenge_phases:
         is_visible: True
       - name: publication_url
         is_visible: True
+    submission_meta_attributes:
+      - name: TextAttribute
+        description: Sample
+        type: text
+        required: False
+      - name: SingleOptionAttribute
+        description: Sample
+        type: radio
+        options: ["A", "B", "C"]
+      - name: MultipleChoiceAttribute
+        description: Sample
+        type: checkbox
+        options: ["alpha", "beta", "gamma"]
+      - name: TrueFalseField
+        description: Sample
+        type: boolean
+        required: True
     is_restricted_to_select_one_submission: False
     is_partial_submission_evaluation_enabled: False
     allowed_submission_file_types: ".json, .zip, .txt, .tsv, .gz, .csv, .h5, .npy, .npz"
   - id: 2
-    name: Day two
+    name: Test Phase
     description: templates/challenge_phase_2_description.html
-    leaderboard_public: False
+    leaderboard_public: True
     is_public: True
     is_submission_public: True
-    start_date: 2023-03-15 00:00:00
-    end_date: 2023-03-15 23:59:59
+    start_date: 2023-03-12 00:00:00
+    end_date: 2099-05-24 23:59:59
     test_annotation_file: annotations/test_annotations_testsplit.json
-    codename: day_two
-    max_submissions_per_day: 1
-    max_submissions_per_month: 1
-    max_submissions: 1
+    codename: test
+    max_submissions_per_day: 5
+    max_submissions_per_month: 50
+    max_submissions: 50
     default_submission_meta_attributes:
       - name: method_name
         is_visible: True
@@ -74,30 +98,48 @@ challenge_phases:
         is_visible: True
       - name: publication_url
         is_visible: True
+    submission_meta_attributes:
+      - name: TextAttribute
+        description: Sample
+        type: text
+      - name: SingleOptionAttribute
+        description: Sample
+        type: radio
+        options: ["A", "B", "C"]
+      - name: MultipleChoiceAttribute
+        description: Sample
+        type: checkbox
+        options: ["alpha", "beta", "gamma"]
+      - name: TrueFalseField
+        description: Sample
+        type: boolean
     is_restricted_to_select_one_submission: False
     is_partial_submission_evaluation_enabled: False
-    allowed_submission_file_types: ".json, .zip, .txt, .tsv, .gz, .csv, .h5, .npy, .npz"
-    
-    dataset_splits:
+
+dataset_splits:
   - id: 1
-    name: All_data_splot
-    codename: all_data_split
-    
-  challenge_phase_splits:
+    name: Train Split
+    codename: train_split
+  - id: 2
+    name: Test Split
+    codename: test_split
+
+challenge_phase_splits:
   - challenge_phase_id: 1
     leaderboard_id: 1
     dataset_split_id: 1
-    visibility: 3
-    leaderboard_decimal_precision: 3
+    visibility: 1
+    leaderboard_decimal_precision: 2
     is_leaderboard_order_descending: True
   - challenge_phase_id: 2
-    leaderboard_id: 2
+    leaderboard_id: 1
     dataset_split_id: 1
     visibility: 3
-    leaderboard_decimal_precision: 3
+    leaderboard_decimal_precision: 2
     is_leaderboard_order_descending: True
-    
-    
-    
-    
-    
+  - challenge_phase_id: 2
+    leaderboard_id: 1
+    dataset_split_id: 2
+    visibility: 1
+    leaderboard_decimal_precision: 2
+    is_leaderboard_order_descending: True
