--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -1,10 +1,7 @@
 # If you are not sure what all these fields mean, please refer our documentation here:
 # https://evalai.readthedocs.io/en/latest/configuration.html
 title: 2023 IPC Stochastic Planning and Reinforcement Learning Track Dry-run
-short_description: The International Probabilistic Planning Competition is organized in the context of the International Conference on 
-Planning and Scheduling (ICAPS). It empirically evaluates state-of-the-art planning systems on a number of benchmark problems. 
-The goals of the IPC are to promote planning research, highlight challenges in the planning community and provide new and interesting problems as 
-benchmarks for future research.
+short_description: IPC 2023
 description: templates/description.html
 evaluation_details: templates/evaluation_details.html
 terms_and_conditions: templates/terms_and_conditions.html
