--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -10,7 +10,7 @@ submission_guidelines: templates/submission_guidelines.html
 leaderboard_description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras egestas a libero nec sagittis.
 evaluation_script: evaluation_script.zip
 remote_evaluation: False
-is_docker_based: False
+is_docker_based: True
 start_date: 2023-03-15 00:00:00
 end_date: 2023-03-16 23:59:59
 published: False
