--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -25,15 +25,15 @@ leaderboard:
 
 challenge_phases:
   - id: 1
-    name: Dev Phase
+    name: Day 1
     description: templates/challenge_phase_1_description.html
     leaderboard_public: False
     is_public: True
     is_submission_public: True
-    start_date: 2023-03-12 00:00:00
-    end_date: 2099-04-25 23:59:59
+    start_date: 2023-03-15 00:00:00
+    end_date: 2023-03-15 23:59:59
     test_annotation_file: annotations/test_annotations_devsplit.json
-    codename: dev
+    codename: one
     max_submissions_per_day: 5
     max_submissions_per_month: 50
     max_submissions: 50
@@ -67,15 +67,15 @@ challenge_phases:
     is_partial_submission_evaluation_enabled: False
     allowed_submission_file_types: ".json, .zip, .txt, .tsv, .gz, .csv, .h5, .npy, .npz"
   - id: 2
-    name: Test Phase
+    name: Day 2
     description: templates/challenge_phase_2_description.html
     leaderboard_public: True
     is_public: True
     is_submission_public: True
-    start_date: 2023-03-12 00:00:00
-    end_date: 2099-05-24 23:59:59
+    start_date: 2023-03-16 00:00:00
+    end_date: 2023-03-16 23:59:59
     test_annotation_file: annotations/test_annotations_testsplit.json
-    codename: test
+    codename: two
     max_submissions_per_day: 5
     max_submissions_per_month: 50
     max_submissions: 50
