--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -108,11 +108,11 @@ challenge_phases:
 
 dataset_splits:
   - id: 1
-    name: UAV HVAC
-    codename: OR
+    name: Train Split
+    codename: train_split
   - id: 2
-    name: Race Car Mountain Car
-    codename: Control
+    name: Test Split
+    codename: test_split
 
 challenge_phase_splits:
   - challenge_phase_id: 1
@@ -123,7 +123,13 @@ challenge_phase_splits:
     is_leaderboard_order_descending: True
   - challenge_phase_id: 2
     leaderboard_id: 1
-    dataset_split_id: 2
+    dataset_split_id: 1
     visibility: 3
+    leaderboard_decimal_precision: 2
+    is_leaderboard_order_descending: True
+  - challenge_phase_id: 2
+    leaderboard_id: 1
+    dataset_split_id: 2
+    visibility: 1
     leaderboard_decimal_precision: 2
     is_leaderboard_order_descending: True
